Fix cta button glow on safari

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -116,7 +116,7 @@
 .contact-cta-container::before {
 	content: "";
 	position: absolute;
-	inset: -2px;
+	inset: -1px;
 	background: linear-gradient(
 		45deg,
 		transparent,
@@ -130,7 +130,7 @@
 	);
 	background-size: 400%;
 	z-index: -1;
-	animation: glow 3s linear infinite;
+	animation: glow 4s linear infinite;
 	border-radius: 5rem;
 	opacity: 0.5;
 }
@@ -138,6 +138,15 @@
 .contact-cta-container::before {
 	inset: -8px;
 	filter: blur(8px);
+}
+
+.contact-cta-container.no-gradient::before {
+	display: none;
+}
+
+.contact-cta-container.no-gradient::after {
+	inset: 0;
+	animation: whiteGlow 3s linear infinite;
 }
 
 .contact-cta:hover {
@@ -185,10 +194,42 @@
 	}
 }
 
+/* Safari doesn't support background gradients properly so we just use this boring glow */
+@keyframes whiteGlow {
+	0% {
+		box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0);
+	}
+	30% {
+		box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.4);
+	}
+	60% {
+		box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.4);
+	}
+	90% {
+		box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0);
+	}
+	100% {
+		box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0);
+	}
+}
+
 @media (max-width: 768px) {
+	.contact {
+		padding-top: 5rem;
+
+		&::after {
+			height: 12rem;
+			/* z-index: 1; */
+			margin-left: -1rem;
+			position: relative;
+			opacity: 0.5;
+		}
+	}
+
 	.contact-list {
 		grid-template-columns: repeat(1, 1fr);
 		gap: 4rem;
+		margin-bottom: 6rem;
 	}
 
 	.contact-item-header {
@@ -198,5 +239,14 @@
 	.cta-gradient {
 		top: 20rem;
 		height: 130rem;
+	}
+
+	.contact-cta-container {
+		.btn {
+			width: 250px;
+			font-size: 1.125rem;
+			/* padding-left: 3rem;
+			padding-right: 3rem; */
+		}
 	}
 }
