--- a/src/components/PersonalProjects.css
+++ b/src/components/PersonalProjects.css
@@ -16,7 +16,7 @@
 
 @media (max-width: 768px) {
 	.portfolio-carousel-block {
-		margin-bottom: 16rem;
+		margin-bottom: 10rem;
 		max-width: 100vw;
 	}
 }
